# mypia

./: .coverage  .coveragerc  .cursorrules  .dockerignore  .env  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  Tiltfile  alembic.ini  conftest.py  coverage.xml  docker-compose.yml  environment.yml  mypy.ini  nginx.conf  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 068c862abdf6_add_token_model.py  06943ccfc1e9_initial_import.py  349e236a8143_updated_tasks.py  3e9492ce7680_add_note_model.py  419c52c1fc74_add_userpreference_model.py  5a8d359076c3_inital.py  62a464a17c9f_initial.py  721dea827a91_initial_migration.py  7d9c51cbd4bb_add_task_model.py  d78e132b0e0c_initial_import.py  d7b30035f65e_initial_migration.py  ea3aacaa8082_updated_relationships.py
app/components/: Analytics.tsx  Auth.tsx  BottomNav.tsx  Calendar.tsx  ChatInterface.tsx  Dashboard.tsx  EmailInterface.tsx  Layout.tsx  Login.tsx  NotificationCenter.tsx  PasswordReset.tsx  Register.tsx  Settings.tsx  Sidebar.tsx  TaskManagement.tsx  UIComponents.tsx
app/hooks/: useNotificationSimulator.ts
app/pages/: _app.tsx  calendar.tsx  chat.tsx  email.tsx  index.tsx  settings.tsx  tasks.tsx
app/store/: useStore.ts
config/: environment.yml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: Gemfile  _config.yml  business_plan.md  index.md  installation.md  myidea.md  prompts.md  ui-prompts.md
docs/source/: api.rst  conf.py  index.rst  installation.rst  modules.rst  usage.rst
frontend/: next-config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/styles/: globals.css
nginx/: default.conf
personal_ai_assistant/: celery_app.py  cli.py  config.py  tasks.py
personal_ai_assistant/api/: __init__.py  auth.py  backup.py  calendar.py  dependencies.py  email.py  github.py  main.py  models.py  save-main.py  tasks.py  text_processing.py  update.py  vector_db.py  vectordb.py  web.py
personal_ai_assistant/auth/: auth_manager.py
personal_ai_assistant/calendar/: __init__.py  caldav_client.py
personal_ai_assistant/config/: __init__.py  base_settings.py  config.py  settings.py  test_config.py
personal_ai_assistant/database/: __init__.py  base.py  db_manager.py  models.py
personal_ai_assistant/email/: __init__.py  imap_client.py
personal_ai_assistant/embeddings/: __init__.py  sentence_transformer.py
personal_ai_assistant/github/: __init__.py  github_client.py
personal_ai_assistant/llm/: __init__.py  llama_cpp_interface.py  text_processor.py
personal_ai_assistant/models/: __init__.py  calendar_event.py  contact.py  document.py  email.py  note.py  task.py  user.py  user_preference.py
personal_ai_assistant/nlp/: __init__.py  spacy_processor.py
personal_ai_assistant/sync/: __init__.py  sync_manager.py
personal_ai_assistant/tasks/: __init__.py  calendar_tasks.py  create_periodic_backup.py  email_tasks.py  general_tasks.py  task_manager.py
personal_ai_assistant/updater/: __init__.py  update_manager.py
personal_ai_assistant/utils/: __init__.py  backup_manager.py  cache.py  encryption.py  exceptions.py  logging_config.py  profiling.py
personal_ai_assistant/vector_db/: __init__.py  chroma_db.py
personal_ai_assistant/web/: __init__.py  scraper.py
postman/: MyPIA_API_Collection.json  MyPIA_Environment.json
scripts/: setup_dev.sh
tests/: conftest.py  test_api.py  test_chroma_db_manager.py  test_db_manager.py  test_e2e.py  test_email_client.py  test_encryption.py  test_integration.py  test_llama_cpp_interface.py
(+65 files in other folders)
