[tool.poetry]
name = "mypia"
version = "0.1.0"
description = "My Personal Intelligent Assistant"
authors = ["Michael <1372930+dodwmd@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
rich = "^10.0.0"
pydantic = "^1.10.7"
python-dotenv = "^1.0.0"
imapclient = "^2.3.1"
caldav = "^1.3.0"
trafilatura = "^1.4.1"
spacy = "^3.5.2"
sqlalchemy = "^1.4.0"
celery = "^5.2.7"
redis = "^4.5.5"
chromadb = "^0.3.23"
sentence-transformers = "^2.2.2"
pygithub = "^1.58.2"
llama-cpp-python = "^0.1.50"
numpy = "^1.21.0"
aioimaplib = "^1.0.0"
aiosmtplib = "^2.0.1"
aiohttp = "^3.8.1"
sphinx = "^6.2.1"
sphinx-rtd-theme = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.19.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
